# ckanext-cloudstorage

./: .gitignore  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
ckanext/cloudstorage/: cli.py  commands.py  controller.py  helpers.py  plugin.py  storage.py  utils.py
ckanext/cloudstorage/fanstatic/scripts/: cloudstorage-multipart-upload.js
ckanext/cloudstorage/logic/action/: multipart.py
ckanext/cloudstorage/migration/cloudstorage/: alembic.ini
ckanext/cloudstorage/migration/cloudstorage/versions/: 8daf8d1f572e_create_cloudstorage_tables.py
ckanext/cloudstorage/plugin/: __init__.py  flask_plugin.py  pylons_plugin.py
ckanext/cloudstorage/templates/cloudstorage/snippets/: multipart_module.html
ckanext/cloudstorage/tests/: ckan_setup.py  conftest.py  test_helpers.py  test_plugin.py
ckanext/cloudstorage/tests/logic/action/: test_multipart.py
ckanext/cloudstorage/views/: __init__.py  resource_download.py
